Update team emails

--- a/our-team.html
+++ b/our-team.html
@@ -159,7 +159,6 @@
                                 <span>External Affairs Director</span>
                                 <h5>Engineering Science</h5>
                                 <div class="social">
-                                    <a href="mailto:president@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/yara-nassar1/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -179,7 +178,6 @@
                                 <span>External Affairs Director</span>
                                 <h5>Mechanical Engineering</h5>
                                 <div class="social">
-                                    <a href="mailto:president@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/maansi-suri-574243194/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -342,7 +340,6 @@
                                 <span>Director of Business Relations</span>
                                 <h5>Mechanical Engineering</h5>
                                 <div class="social">
-                                    <a href="mailto:vp.finance@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/helen-zhou-9444251a8/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -362,7 +359,6 @@
                                 <span>Director of Business Relations</span>
                                 <h5>Computer Engineering</h5>
                                 <div class="social">
-                                    <a href="mailto:vp.finance@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/synayousefishiviari/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -380,7 +376,6 @@
                                 <span>Director of Business Relations</span>
                                 <h5>Engineering Science</h5>
                                 <div class="social">
-                                    <a href="mailto:vp.finance@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/hibahhussain/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -400,7 +395,6 @@
                                 <span>Director of Business Relations</span>
                                 <h5>Engineering Science</h5>
                                 <div class="social">
-                                    <a href="mailto:vp.finance@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/heraa-muqri/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -418,7 +412,6 @@
                                 <span>Director of Business Relations</span>
                                 <h5>Materials Engineering </h5>
                                 <div class="social">
-                                    <a href="mailto:vp.finance@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/maha-zainab-83a6ab258/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -465,7 +458,6 @@
                                 <span>Graphic Design Director</span>
                                 <h5>Chemical Engineering</h5>
                                 <div class="social">
-                                    <a href="mailto:vp.marketing@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/kristenparmar/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -485,7 +477,6 @@
                                 <span>Graphic Design Director</span>
                                 <h5>Global Health and Physiology</h5>
                                 <div class="social">
-                                    <a href="mailto:vp.marketing@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/pareesa-versi/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -505,7 +496,6 @@
                                 <span>Graphic Design Director</span>
                                 <h5>Computer Science and Statistics</h5>
                                 <div class="social">
-                                    <a href="mailto:vp.marketing@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/khushi-agrawal-98816a231/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -603,7 +593,6 @@
                                 <span>Web Development Director</span>
                                 <h5>Computer Engineering</h5>
                                 <div class="social">
-                                    <a href="mailto:webmaster@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/gaurika-mahajan/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -622,9 +611,6 @@
                                 <h4>Zhilong (Charlie) Zhou</h4>
                                 <span>Photography Director</span>
                                 <h5>Physics Specialist</h5>
-                                <div class="social">
-                                    <a href="mailto:editor@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -642,7 +628,6 @@
                                 <span>Social Media Director</span>
                                 <h5>Computer Engineering </h5>
                                 <div class="social">
-                                    <a href="mailto:vp.marketing@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/mansi-patel-2002/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -662,7 +647,6 @@
                                 <span>Social Media Director</span>
                                 <h5>Engineering Science</h5>
                                 <div class="social">
-                                    <a href="mailto:vp.marketing@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/katiewells11/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -681,9 +665,6 @@
                                 <h4>Catherine Yeh</h4>
                                 <span>Podcast Director</span>
                                 <h5>Computer Engineering </h5>
-                                <div class="social">
-                                    <a href="mailto:editor@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -804,7 +785,6 @@
                                 <span>PD Marketing Director</span>
                                 <h5>Computer Engineering</h5>
                                 <div class="social">
-                                    <a href="mailto:pd.operations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/uzma-ferdous" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -891,7 +871,6 @@
                                 <span>Outreach Operations Director</span>
                                 <h5>Bloomberg Nursing</h5>
                                 <div class="social">
-                                    <a href="mailto:vp.outreach@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/madusha-fernando-0aba281b6/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -904,6 +883,7 @@
                         <!--<img src="img/team-2022/Nasoe Talash 1.jpg" class="img-fluid"
                         onmouseover="this.src='img/team-2022/Nasoe Talash 2.jpg';"
                         onmouseout="this.src='img/team-2022/Nasoe Talash 1.jpg';"> -->
+                        <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Nasoe Talash</h4>
@@ -1030,7 +1010,6 @@
                                 <span>Outreach Marketing Director</span>
                                 <h5>Chemical Engineering</h5>
                                 <div class="social">
-                                    <a href="mailto:vp.outreach@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/amy-b-785627232 " target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -1100,7 +1079,6 @@
                                 <span>Conference Operations Director</span>
                                 <h5>Computer Engineering </h5>
                                 <div class="social">
-                                    <a href="mailto:conference.internal@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/srinidhi-shankar/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -1120,7 +1098,6 @@
                                 <span>Conference Operations Associate Director</span>
                                 <h5>Computer Science and Statistics</h5>
                                 <div class="social">
-                                    <a href="mailto:conference.internal@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/lina-jin-99b5121b0" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -1140,7 +1117,6 @@
                                 <span>Conference Operations Associate Director</span>
                                 <h5>Engineering Science</h5>
                                 <div class="social">
-                                    <a href="mailto:conference.internal@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="www.linkedin.com/in/nuzaira-habib-96b229244" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -1160,7 +1136,6 @@
                                 <span>Conference Operations Associate Director</span>
                                 <h5>Immunology, Health + Disease, Physiology</h5>
                                 <div class="social">
-                                    <a href="mailto:conference.internal@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/tina-do-82a34b246/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -1180,7 +1155,6 @@
                                 <span>Conference Panels Director</span>
                                 <h5>Engineering Science</h5>
                                 <div class="social">
-                                    <a href="mailto:conference.relations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/sarvnaz-ale/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -1200,7 +1174,6 @@
                                 <span>Conference Panels Director</span>
                                 <h5>Chemical Engineering</h5>
                                 <div class="social">
-                                    <a href="mailto:conference.relations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/cassidy-tan-/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -1220,7 +1193,6 @@
                                 <span>Conference Panels Director</span>
                                 <h5>Engineering Science</h5>
                                 <div class="social">
-                                    <a href="mailto:conference.relations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/ayleenfarnood/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -1260,7 +1232,7 @@
                                 <span>Conference Business Relations Director</span>
                                 <h5>Psychology</h5>
                                 <div class="social">
-                                    <a href="mailto:conference.internal@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                                    <a href="mailto:conference.relations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -1279,7 +1251,7 @@
                                 <span>Conference Business Relations Director</span>
                                 <h5>Engineering Science</h5>
                                 <div class="social">
-                                    <a href="mailto:conference.internal@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                                    <a href="mailto:conference.relations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/esther-zhou/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -1299,7 +1271,7 @@
                                 <span>Conference Business Relations Director</span>
                                 <h5>Human Biology and Psychology</h5>
                                 <div class="social">
-                                    <a href="mailto:conference.internal@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                                    <a href="mailto:conference.relations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -1336,7 +1308,6 @@
                                 <span>Conference Marketing Director</span>
                                 <h5>Computer Science and Statistics </h5>
                                 <div class="social">
-                                    <a href="mailto:conference.internal@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/helena-g-2527a922b " target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
