Update headshots and bios (#2)

--- a/our-team.html
+++ b/our-team.html
@@ -527,7 +527,7 @@
                         <!--<img src="img/team-2022/Aubrey Uy 1.jpeg" class="img-fluid"
                         onmouseover="this.src='img/team-2022/Aubrey Uy 2.jpeg';"
                         onmouseout="this.src='img/team-2022/Aubrey Uy 1.jpeg';">-->
-                        <img src="img/color1.jpg" class="img-fluid">
+                        <img src="img/team-2023/Jessica Khorana.jpeg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Jessica Khorana</h4>
@@ -1605,6 +1605,35 @@
         </div>
     </div>  -->
 
+    <div class="modal fade" id="jessicak" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <!-- <div class="modal-header">
+                    <img src="img/speakers/kathryn-cropped.png" alt="avatar" class="rounded-circle img-responsive">
+                </div> -->
+
+                <div class="modal-body text-center">
+                    <h1>Jessica Khorana</h1>
+                    <p>Hey there! I'm Jessica, and I'm in my fourth year currently completing a double major in neuroscience and psychology. As a Stories of WISE Editor, I hope 
+                        to increase the visibility of women in STEM, help encourage and support other young girls to pursue their passion for science, and to use my platform to 
+                        advocate for gender equity and diversity in the field. When I'm not buried under the endless of piles of assignments and tests that all U of T students are 
+                        familiar with, I like to explore coffee shops and galleries, listen to music, bake, and hole up in one of the libraries with a book. </p>                    
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div> 
+
     <div class="modal fade" id="isabellaw" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
 
@@ -1921,6 +1950,68 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="helenz" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <!-- <div class="modal-header">
+                    <img src="img/speakers/kathryn-cropped.png" alt="avatar" class="rounded-circle img-responsive">
+                </div> -->
+
+                <div class="modal-body text-center">
+                    <h1>Helen Zhou</h1>
+                    <a href="https://www.linkedin.com/in/helen-zhou-9444251a8/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <p>Hi! I’m Helen. I’m in my third year of mechanical engineering and am currently on a co-op work term. I love playing the 
+                        piano, watching movies, outdoor activities, and dogs! I’m excited to be part of WISE as a Director of Business Relations. 
+                        I look to the cause of empowering women in the STEM field. When we keep an open mind, we realize that we are all capable of 
+                        anything regardless of our differences - that’s why I embrace equity.</p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="charlenek" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <!-- <div class="modal-header">
+                    <img src="img/speakers/kathryn-cropped.png" alt="avatar" class="rounded-circle img-responsive">
+                </div> -->
+
+                <div class="modal-body text-center">
+                    <h1>Helen Zhou</h1>
+                    <a href="mailto:outreach@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="http://linkedin.com/in/charlenekamba" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <p>Hi! I’m Charlene, a second-year student pursuing a double major in Statistics and Mathematics. In my free time, I enjoy 
+                        reading, traveling, trying new restaurants (I’m a huge foodie!), and engaging in adrenaline-pumping activities (including skydiving!). 
+                        I’m really passionate about youth empowerment, so I’m involved in many youth-centred volunteer organizations here on campus, including WISE. 
+                        As the Co-Director for Community Outreach, I’m really excited to help foster learning, growth and connection for young students in STEM 
+                        through working with local community organizations. We have a very exciting year ahead!</p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
     
     <div class="modal fade" id="wandaj" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
@@ -2061,6 +2152,33 @@
                     <a href="mailto:conference.relations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                     <a href="https://www.linkedin.com/in/sarvnaz-ale/" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <p>Hi! My name is Sarvnaz and I’m a first year Engineering Science student acting as one of this year’s Conference Competition Directors. I’m excited to help host a lively and engaging conference this year! In my free time I like to try out new crafts, read, and take care of my plants. I’m always excited to make new friends, so feel free to message me if you’d like to chat!</p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div> 
+
+    <div class="modal fade" id="angitham" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body text-center">
+                    <h1>Angitha Mriduraj</h1>
+                    <a href="mailto:hs.mentorship@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <p>Hi, I'm Angitha! I'm in my final year studying Cell and Molecular Biology and Immunology. Leaving my small town for Toronto was a big leap, 
+                        but I still cherish nature, and I enjoy going for walks. I have also recently tried to do puzzles in my free time. I understand the challenges of not 
+                        having easy access to resources and mentors. That's why, at WISE, I'm enthusiastic about connecting high school students with their science and engineering 
+                        role models and providing a valuable resource for their questions. My primary goal is to inspire the next generation of scientists and address any barriers 
+                        that may hinder their path. Together, we can make science and engineering more accessible and exciting! </p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
