--- a/opportunities.html
+++ b/opportunities.html
@@ -161,7 +161,7 @@
                 </div> -->
                 <button type="button" style="margin:10px;" class="collapsible">Sanofi Workshop Series: Top Tips & Tricks to Showcase Your Expertise in a Job Interview!</button>
                 <div class="content">
-                    <!img src="img/marketing/PwC.png" width="100%" height="650">
+                    <!-- <img src="img/marketing/PwC.png" width="100%" height="650"> -->
                     <p>Sanofi is hosting the second of a three part development workshop series for the Fall 2023 season, <b>NA Sanofi Workshop Series: Top Tips & Tricks to Showcase Your Expertise in a Job Interview!</b> </p>
                     <p><b>About the Workshop</b>: Interviews can sometimes feel so intimidating, but the good news is that they don’t have to be! Join the development workshop session and learn some quick tips and tricks with how to showcase your experiences in a meaningful way. You will also have the opportunity to hear from Sanofi Early Career hires on their interview experiences and also from a recruiter’s perspective on the key things to do and what not to not do.</p>
                     <b>About Sanofi</b>: We are an innovative global healthcare company, driven by one purpose: we chase the miracles of science to improve people’s lives. Our teams across the world strive to transform the practice of medicine, turning the impossible into the possible for patients. We provide potentially life-changing treatments and the protection of life-saving vaccines to millions of people, and affordable access to our medicines in some of the world’s poorest countries.</p>
@@ -217,6 +217,47 @@
                     </ul>
                 </div>
 
+                <button type="button" style="margin:10px;" class="collapsible">'What You Need to Know About Starting a Career in Sales' Hosted by Tommy Sumi from Jarvis Consulting Group!</button>
+                <div class="content">
+                    <!-- img src="img/marketing/PwC.png" width="100%" height="650"> -->
+                    <p>Jarvis Consulting Group is hosting a virtual workshop on <b>'What You Need to Know About Starting a Career in Sales'</b> on Tuesday, November 14th, from 12p.m. to 1p.m.!</p>
+                    <p>This virtual workshop will be hosted by Jarvis’ very own Lead Account Executive, Tommy Sumi! This opportunity will allow for students to gain valuable insight on careers in sales. Join us to learn essential strategies for successfully entering into a new sales role with confidence, drive, and grit!</p>
+                    <p>This is a great opportunity to learn about sales as a career path if you're a student who may not be sure what you want to do after graduation. We'll talk about the traits well suited for jobs in sales, how to impress a sales hiring manager or leader, and how to succeed in a sales role. We hope to see you there!</p>
+                    <p><b>Register for free now and join us for an unforgettable event!</b></p>
+                    <ul>
+                        <li>Link to the Google Meeting (copy & paste into browser): <a href="https://meet.google.com/urz-xngt-ikn">https://meet.google.com/urz-xngt-ikn</a></li>
+                        <li>Feel free to connect with Tommy Sumi on LinkedIn here!: <a href="https://www.linkedin.com/in/tommy-sumi-892ab3ab/">https://www.linkedin.com/in/tommy-sumi-892ab3ab/</a></li>
+                        <li>Want to learn more about Jarvis? Check out this video here: <a href="https://www.linkedin.com/feed/update/urn:li:activity:7074049903357808640/">https://www.linkedin.com/feed/update/urn:li:activity:7074049903357808640/</a></li>
+
+                    </ul>
+                </div>
+
+                <button type="button" style="margin:10px;" class="collapsible">Roadmap to zero hunger: Agricultural innovations for a climate-smart future</button>
+                <div class="content">
+                    <!-- img src="img/marketing/PwC.png" width="100%" height="650"> -->
+                    <p>Are you passionate about creating a sustainable future and want to connect with multidisciplinary leaders in the space? <a href="http://globalspark.world/">Global Spark</a> is hosting its Systems for Sustainability Forum (SSF) on November 18th 2023 focused on the topic of <b>“Roadmap to zero hunger: Agricultural innovations for a climate-smart future”</b></p>
+                    <p><b>Date: November 18, 2023</b></p>
+                    <p><b>Time: 11:00 am - 3:00 pm EST</b>></p>
+                    <p><b>Location: Virtual and in-person at the BCG office in Toronto (81 Bay St, Toronto)</b></p>
+                    <p><b>Event Highlights:</b></p>
+                    <ol>
+                        <li><b>Thought Leader Panel</b> (11AM - 12:30PM EST) Join global experts to discuss innovative solutions for food security and equitable value chains</li>
+                        <li><b>Small Group Discussions with Panelists</b> (12:30PM - 1:00PM EST) Engage in an intimate discussion with one of our panelists</li>
+                        <li><b>Community Workshops</b>(1:30PM - 3PM EST): Engage with leading organizations to discover tangible climate and food systems solutions</li>
+                        <li><b>Networking Opportunities:</b> Connect with fellow young professionals, industry experts, and potential collaborators who share your passion for sustainability</li>
+                    </ol>
+                    <p><b>Register by November 10th for the chance to join in-person or participate in a small group discussion with our speakers!</b>: <a href="https://buff.ly/3tyOHWX">https://buff.ly/3tyOHWX</a></p>
+                    <p>This virtual workshop will be hosted by Jarvis’ very own Lead Account Executive, Tommy Sumi! This opportunity will allow for students to gain valuable insight on careers in sales. Join us to learn essential strategies for successfully entering into a new sales role with confidence, drive, and grit!</p>
+                    <p>This is a great opportunity to learn about sales as a career path if you're a student who may not be sure what you want to do after graduation. We'll talk about the traits well suited for jobs in sales, how to impress a sales hiring manager or leader, and how to succeed in a sales role. We hope to see you there!</p>
+                    <p><b>Register for free now and join us for an unforgettable event!</b></p>
+                    <ul>
+                        <li>Link to the Google Meeting (copy & paste into browser): <a href="https://meet.google.com/urz-xngt-ikn">https://meet.google.com/urz-xngt-ikn</a></li>
+                        <li>Feel free to connect with Tommy Sumi on LinkedIn here!: <a href="https://www.linkedin.com/in/tommy-sumi-892ab3ab/">https://www.linkedin.com/in/tommy-sumi-892ab3ab/</a></li>
+                        <li>Want to learn more about Jarvis? Check out this video here: <a href="https://www.linkedin.com/feed/update/urn:li:activity:7074049903357808640/">https://www.linkedin.com/feed/update/urn:li:activity:7074049903357808640/</a></li>
+
+                    </ul>
+                </div>
+
 
                 <!-- <button type="button" class="collapsible">Performance Improvement Consultant (Full Time)</button>
                 <div class="content">
@@ -243,7 +284,7 @@
                     }
                     </script>
                 
-                <p class="align"><i>Last updated: October 28, 2023</i></p>
+                <p class="align"><i>Last updated: November 2, 2023</i></p>
             </div>     
         </section>
 	</main>
